--- a/oishii/OiSHii/res/layout/add_to_basket_dailog.xml
+++ b/oishii/OiSHii/res/layout/add_to_basket_dailog.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="10dp"
@@ -15,12 +15,12 @@
 
         <TextView
             android:id="@+id/itemCount"
+            style="@style/buttonShadow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
+            android:text="1X"
             android:textColor="@color/text_color"
             android:textSize="15sp"
-            android:text="1X"
             android:textStyle="bold" />
 
         <TextView
@@ -77,7 +77,6 @@
             android:id="@+id/minus"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            
             android:layout_marginLeft="5dp"
             android:background="@drawable/minus_selector" />
     </LinearLayout>
