--- a/oishii/OiSHii/res/layout/basket_item.xml
+++ b/oishii/OiSHii/res/layout/basket_item.xml
@@ -9,18 +9,18 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:layout_toLeftOf="@+id/price"
+        android:layout_toLeftOf="@+id/priceLayout"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="3dp"
             android:text="TextView"
             android:textColor="@color/text_color"
             android:textSize="17sp"
-            android:textStyle="bold"
-            android:layout_marginRight="3dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/item"
@@ -32,17 +32,33 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/price"
+    <LinearLayout
+        android:id="@+id/priceLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="17sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="10dp" >
+        
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"
+            android:layout_marginRight="3dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/btnDelete"
+            android:layout_alignParentRight="true"
+           
+            android:background="@drawable/delete_selector" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
