--- a/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
@@ -1,10 +1,8 @@
-<FrameLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
     <ScrollView
-       
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@android:color/white" >
@@ -15,8 +13,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginTop="30dp"
-            android:paddingTop="30dp"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingTop="30dp" >
 
             <ProgressBar
                 android:id="@+id/progress"
@@ -64,6 +62,18 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/soldout"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+                android:id="@+id/soldOut" />
         </LinearLayout>
     </ScrollView>
 
