--- a/oishii/OiSHii/res/layout/modal_dialog.xml
+++ b/oishii/OiSHii/res/layout/modal_dialog.xml
@@ -55,7 +55,8 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/dismiss" />
+            android:text="@string/btn_yes"
+            android:layout_marginRight="5dp" />
 
         <Button
             android:id="@+id/btnCancel"
@@ -64,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
        
-            android:text="@string/dismiss" />
+            android:text="@string/btn_no" />
     </LinearLayout>
 
 </LinearLayout>
