--- a/oishii/OiSHii/res/layout/error_dialog.xml
+++ b/oishii/OiSHii/res/layout/error_dialog.xml
@@ -1,16 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
+    android:background="@color/text_color"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/buttonShadow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/app_name"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -32,23 +33,22 @@
 
         <TextView
             android:id="@+id/errMsg"
+            style="@style/white_text_with_shadow"
             android:layout_width="fill_parent"
-            android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="15sp"
-            android:textColor="@color/text_color" />
+            android:layout_marginRight="10dp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btnDismiss"
-        style="@style/primary_btn"
+        style="@style/btn_black"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
         android:text="@string/dismiss" />
 
 </LinearLayout>
