--- a/oishii/OiSHii/res/layout/modal_dialog.xml
+++ b/oishii/OiSHii/res/layout/modal_dialog.xml
@@ -1,16 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
+    android:background="@color/text_color"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/app_name"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
+        style="@style/buttonShadow"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -21,7 +22,8 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp" >
 
         <ImageView
             android:layout_width="50dp"
@@ -32,39 +34,36 @@
 
         <TextView
             android:id="@+id/errMsg"
+            style="@style/white_text_with_shadow"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:textColor="@color/text_color"
-            android:textSize="15sp" />
+            android:layout_gravity="center_vertical" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" 
-             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp">
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/btnOk"
-            style="@style/primary_btn"
+            style="@style/btn_black"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/btn_yes"
-            android:layout_marginRight="5dp" />
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:text="@string/btn_yes" />
 
         <Button
             android:id="@+id/btnCancel"
-            style="@style/primary_btn"
-             android:layout_weight="1"
+            style="@style/btn_black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-       
+            android:layout_weight="1"
             android:text="@string/btn_no" />
     </LinearLayout>
 
