--- a/oishii/OiSHii/res/layout/basket.xml
+++ b/oishii/OiSHii/res/layout/basket.xml
@@ -89,6 +89,44 @@
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
                     android:background="#E0E0E0" />
+                
+                  <RelativeLayout
+                      android:id="@+id/discountParent"
+                      android:visibility="gone"
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_toLeftOf="@+id/subtotal"
+                        android:text="@string/discount"
+                        android:textColor="@android:color/black"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/discount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:textColor="@color/text_color"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/discountSeparator"
+                    android:visibility="gone"
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="#E0E0E0" />
 
                 <RelativeLayout
                     xmlns:android="http://schemas.android.com/apk/res/android"
