--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -117,7 +117,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/totalPrice"
+                    android:id="@+id/totalPriceTag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right|center_vertical"
