--- a/oishii/OiSHii/res/layout/basket_item.xml
+++ b/oishii/OiSHii/res/layout/basket_item.xml
@@ -10,6 +10,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/priceLayout"
+        android:layout_centerVertical="true"
         android:orientation="horizontal" >
 
         <TextView
@@ -37,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp" >
 
