--- a/oishii/OiSHii/res/layout/saved_payments.xml
+++ b/oishii/OiSHii/res/layout/saved_payments.xml
@@ -1,32 +1,48 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginTop="8dp" >
+    android:layout_marginTop="8dp"
+    android:orientation="vertical" >
 
-    <LinearLayout
+    <Button
+        android:id="@+id/btn_alternate"
+        style="@style/btn_black"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_marginBottom="5dp"
+        android:text="@string/btn_no_saved"
+        android:visibility="gone" />
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
 
         <LinearLayout
-            android:id="@+id/parent"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/stroke_border"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/noLocations"
-            style="@style/buttonShadow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/no_cards"
-            android:textColor="@color/text_color"
-            android:textSize="17sp"
-            android:visibility="gone" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/parent"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/stroke_border"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical" />
 
-</ScrollView>
+            <TextView
+                android:id="@+id/noLocations"
+                style="@style/buttonShadow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/no_cards"
+                android:textColor="@color/text_color"
+                android:textSize="17sp"
+                android:visibility="gone" />
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
