--- a/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
@@ -31,6 +31,19 @@
                 android:visibility="gone" />
 
             <TextView
+                android:textColor="@android:color/white"
+                android:id="@+id/remaining"
+                style="@style/sploffers_text"
+                android:layout_width="fill_parent"
+                android:paddingTop="3dp"
+                android:gravity="center"
+                android:paddingBottom="3dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,7 +129,7 @@
                 <View style="@style/fieldSeparator" />
 
                 <RelativeLayout
-                     android:id="@+id/snackLayout"
+                    android:id="@+id/snackLayout"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
