--- a/oishii/OiSHii/res/layout/home.xml
+++ b/oishii/OiSHii/res/layout/home.xml
@@ -9,7 +9,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="@string/btn_today_menu" 
-        style="@style/primary_btn"
+        style="@style/btn_black"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"/>
