--- a/oishii/OiSHii/res/layout/saved_payments.xml
+++ b/oishii/OiSHii/res/layout/saved_payments.xml
@@ -19,6 +19,7 @@
         android:id="@+id/saveCC"
         android:paddingLeft="35dp"
         android:visibility="gone"
+        android:textColor="@color/text_color"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/save_cc" />
