--- a/oishii/OiSHii/res/layout/history_empty_order.xml
+++ b/oishii/OiSHii/res/layout/history_empty_order.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:gravity="center" >
 
     <TextView
         android:id="@+id/textView1"
@@ -9,8 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginLeft="8dp"
         android:text="@string/no_orders"
         android:textColor="@color/text_color" />
