--- a/oishii/OiSHii/res/layout/locations.xml
+++ b/oishii/OiSHii/res/layout/locations.xml
@@ -15,6 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="35dp"
+            android:layout_gravity="center_horizontal"
             android:textColor="@color/text_color"
             style="@style/buttonShadow"
             android:visibility="gone"
