--- a/oishii/OiSHii/res/layout/saved_payments.xml
+++ b/oishii/OiSHii/res/layout/saved_payments.xml
@@ -24,6 +24,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/save_cc" />
+    
+    <View style="@style/fieldSeparator" android:visibility="gone" android:id="@+id/separator"
+        android:layout_marginBottom="5dp"/>
 
     <ScrollView
         android:layout_width="fill_parent"
