--- a/oishii/OiSHii/res/layout/add_location_dialog.xml
+++ b/oishii/OiSHii/res/layout/add_location_dialog.xml
@@ -159,7 +159,7 @@
         android:id="@+id/btnAddLocation"
         style="@style/primary_btn"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
