--- a/oishii/OiSHii/res/layout/basket_item.xml
+++ b/oishii/OiSHii/res/layout/basket_item.xml
@@ -7,19 +7,27 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/priceLayout"
-        android:layout_centerVertical="true"
         android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_height="20dp"
+            android:background="@drawable/delete_selector" />
 
         <TextView
             android:id="@+id/no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="8dp"
             android:text="TextView"
-            android:textColor="@color/text_color"
+            android:textColor="@android:color/black"
             android:textSize="17sp"
             android:textStyle="bold" />
 
@@ -27,10 +35,11 @@
             android:id="@+id/item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="TextVfgdgdfgdgdgdgdgdfgdfgdfgfdgdfgdfgdfgiew"
+            android:singleLine="true"
             android:textColor="@android:color/black"
             android:textSize="17sp"
-            android:textStyle="bold" />
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -51,13 +60,6 @@
             android:textColor="@android:color/black"
             android:textSize="17sp"
             android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btnDelete"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/delete_selector" />
     </LinearLayout>
 
 </RelativeLayout>
