--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -129,7 +129,11 @@
                     android:textColor="@android:color/white"
                     android:textSize="10sp"
                     android:textStyle="bold"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:shadowColor="@android:color/black"
+                    android:shadowDx="0"
+                    android:shadowDy="1"
+                    android:shadowRadius="0.8" />
             </FrameLayout>
         </LinearLayout>
     </LinearLayout>
