--- a/oishii/OiSHii/res/layout/todays_menu_item_contents.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_contents.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_menu"
+    android:background="@android:color/white"
     android:orientation="horizontal" >
 
     <LinearLayout
@@ -88,7 +88,7 @@
             android:id="@+id/btnAddBasket"
             style="@style/primary_btn"
             android:layout_width="fill_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="3dp"
@@ -112,8 +112,8 @@
             android:shadowRadius="0.8"
             android:text="@string/details"
             android:textColor="@android:color/white"
-            android:textSize="13dp"
-            android:textStyle="bold" />
+            android:textSize="13dp" 
+            android:gravity="center_horizontal"/>
     </LinearLayout>
 
 </LinearLayout>
