--- a/oishii/OiSHii/res/layout/todaysmenu_list_item.xml
+++ b/oishii/OiSHii/res/layout/todaysmenu_list_item.xml
@@ -25,7 +25,6 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:text="Text"
             android:layout_toLeftOf="@+id/imageView2"
             android:layout_toRightOf="@+id/imageView1"
             android:singleLine="true" />
@@ -37,6 +36,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:scaleType="fitXY"
             android:src="@drawable/new_arrow" />
 
