--- a/oishii/OiSHii/res/layout/home.xml
+++ b/oishii/OiSHii/res/layout/home.xml
@@ -38,7 +38,7 @@
 
         <Button
             android:id="@+id/todaysMenu"
-            style="@style/btn_black"
+            style="@style/btn_plain_black"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -47,6 +47,8 @@
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="@string/btn_today_menu" />
     </FrameLayout>
 
